fix(components): :lipstick: fixed result not wrapped

--- a/packages/web-next/src/styles/globals.css
+++ b/packages/web-next/src/styles/globals.css
@@ -31,8 +31,10 @@ a {
 .ais-SearchBox-reset {
   display: none;
 }
+
+/* IMPORTANT: set flex-wrap */
 .ais-Hits-list {
-  @apply flex flex-col flex-wrap md:flex-row gap-6;
+  @apply flex flex-wrap gap-6;
 }
 .ais-Pagination-list {
   @apply overflow-x-scroll my-4 flex gap-2 justify-center;
